<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".InicioActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="250dp"
                android:text="@string/delantales"
                android:layout_gravity="center"
                android:id="@+id/buttonDelantales"
                android:gravity="center"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="250dp"
                android:text="@string/manteleria"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/buttonManteleria"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="250dp"
                android:text="@string/individual"
                android:layout_gravity="center"
                android:id="@+id/buttonIndividual"
                android:gravity="center"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="250dp"
                android:text="@string/tapiceria"
                android:layout_gravity="center"
                android:id="@+id/buttonTapiceria"
                android:gravity="center"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="250dp"
                android:text="@string/acerca"
                android:layout_gravity="center"
                android:id="@+id/buttonAcerca"
                android:gravity="center"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="250dp"
                android:text="@string/contacto"
                android:layout_gravity="center"
                android:id="@+id/buttonConctacto"
                android:gravity="center"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="200dp">
    </ImageView>


</LinearLayout>